2009-10-05  Sanel <karijes@users.sourceforge.net>

	* m4/fltk.m4: remove possible optimization flags; on NetBSD fltk-config
	uses -O2 (stupid)

2009-10-02  Sanel <karijes@users.sourceforge.net>

	* edelib/DesktopFile.h:
	* src/DesktopFile.cpp:
	* test/desktopfile.cpp: behaviour of exec() is now much more conformant to
	The Desktop Entry Spec, returning full executable path without touching
	the arguments (escaping and special variables are not implemented yet);
	try_exec() now checks only if execuatable exists; tests updated
	* src/File.cpp: used E_DIR_SEPARATOR

2009-09-29  Sanel <karijes@users.sourceforge.net>

	* edelib/Directory.h: newline at the end of the file or SunStudio 11 C++
	compiler will crash

2009-09-26  Sanel <karijes@users.sourceforge.net>

	* edelib/*.h: added EDELIB part to header protector 
	* edelib/StrUtil.h: dumping isws() helper function; stringtok() will
	now directly use strchr()
	* m4/compiler-name.m4: macro for deducing compiler name

2009-09-25  Sanel <karijes@users.sourceforge.net>

	* Jamconfig.in:
	* Jamrules: LIBS from configure should be used, not LDLIBS
	* m4/various.m4: use only gcc specific flags for gcc
	* Jamrules.in:
	* Jamrules: moving STDLIB to Jamrules; some warning flags for SunStudio
	* Jamconfig.in: use CFLAGS var name instead CCFLAGS, which caused jam to
	skip given flags for C code
	* src/tinyscheme/scheme.c: initialize/mark sink; this caused very strange
	crashes on SunStudio
	* m4/various.m4: use '-g' if gcc wasn't detected
	* src/tinyscheme/scheme.c: fix a warnings

2009-09-24  Sanel <karijes@users.sourceforge.net>

	* m4/dbus.m4:
	* src/EdbusConnection.cpp: dbus_watch_get_unix_fd() is marked as
	deprecated in newer dbus versions

2009-09-23  Sanel <karijes@users.sourceforge.net>

	* src/MimeType.cpp:
	* src/xdgmime/xdgmime.h:
	* src/xdgmime/xdgmime.c: added xdg_mime_get_mime_type_for_file2() that
	will always do stat() on target file; xdg_mime_get_mime_type_for_file()
	code was reverted to original implementation