@@ -98,6 +98,7 @@ EDELIB_SHARED
 EDELIB_NLS
 EDELIB_MIME
 EDELIB_DBUS
+EDELIB_LARGEFILE
 
 AC_ARG_VAR([PKG_CONFIG], [pkg-config command])
 AC_ARG_VAR([PKG_CONFIG_PATH], [A directory with .pc files for pkg-config])
@@ -118,6 +119,9 @@ else
 	CFLAGS="$CFLAGS $DEBUG_FLAGS"
 	CXXFLAGS="$CXXFLAGS $DEBUG_FLAGS"
 fi
+
+CFLAGS="$CFLAGS $LARGEFILE"
+CXXFLAGS="$CXXFLAGS $LARGEFILE"
 
 dnl this is issued from buildbot so edelib can be used from local directory
 if test -n "$EDELIB_USE_LOCALDIR"; then
